新增產品頁面

--- a/src/assets/css/_variables.sass
+++ b/src/assets/css/_variables.sass
@@ -6,6 +6,8 @@ $color-light-gray: #9b9b9b
 $color-75: #757575
 $color-eb: #ebebeb
 $color-9b: #9b9b9b
+$color-55: #55595C
+$color-cc: #CCCCCC
 $color-main-green: #7ed321
 $color-main-red: #d0021b
 $color-main-blue: #4a90e2
