串接firebase Real DB 查詢與修改及增加Footer

--- a/src/assets/css/add-product.sass
+++ b/src/assets/css/add-product.sass
@@ -25,7 +25,7 @@ section#add-product-wrapper
         z-index: 2
         box-shadow: 0 0 10px rgba(0, 0, 0, .5)
         overflow: hidden
-
+        overflow-y: scroll
         .add-head
             display: inline-block
             +size(100%, 64px)
