--- a/src/assets/css/product.sass
+++ b/src/assets/css/product.sass
@@ -29,6 +29,7 @@ section#control-wrapper
                 text-decoration: none
                 text-align: center
                 transition: linear .2s
+                cursor: pointer
                 &:active, &:hover
                     background-color: $color-fff
                     border: 1px solid $color-000
