新增商品功能完成

--- a/src/assets/css/add-product.sass
+++ b/src/assets/css/add-product.sass
@@ -138,6 +138,7 @@ section#add-product-wrapper
                     div
                         flex: 1
                 .specific-setter
+                    margin-top: 8px
                     display: flex
                     flex-direction: row
                     div
